@@ -1,32 +1,32 @@
 rlzi,sid,eid,gmv_PGA,gmv_SA(0.3)
-0,12,0,0.139,0.211
-0,11,2,0.028,0.089
-0,11,1,0.059,0.182
-0,8,2,0.158,0.609
-0,6,2,0.112,0.304
-0,5,3,0.227,0.460
-0,2,3,0.093,0.330
-0,4,3,0.384,0.950
-0,9,3,0.128,0.198
-0,2,5,0.197,0.456
-0,7,6,0.199,0.620
-0,12,7,0.150,0.866
-0,8,7,0.121,0.510
-0,6,8,0.698,1.180
-0,10,8,0.179,0.316
-0,1,8,0.137,0.161
-0,10,9,0.262,0.525
-0,11,8,0.320,0.386
-0,11,9,0.268,0.544
-0,5,1,0.106,0.230
-0,4,1,0.051,0.144
-0,3,1,0.060,0.225
-0,7,0,0.195,0.700
-0,7,1,0.190,0.385
-0,10,1,0.104,0.137
-0,5,0,0.200,0.684
-0,8,1,0.080,0.118
-0,7,9,0.115,0.770
-0,5,9,0.170,0.703
-0,5,4,0.190,0.457
-0,12,5,0.210,0.310
+0,12,90000,0.139,0.211
+0,11,90002,0.028,0.089
+0,11,90001,0.059,0.182
+0,8,90002,0.158,0.609
+0,6,90002,0.112,0.304
+0,5,90003,0.227,0.460
+0,2,90003,0.093,0.330
+0,4,90003,0.384,0.950
+0,9,90003,0.128,0.198
+0,2,90005,0.197,0.456
+0,7,90006,0.199,0.620
+0,12,90007,0.150,0.866
+0,8,90007,0.121,0.510
+0,6,90008,0.698,1.180
+0,10,90008,0.179,0.316
+0,1,90008,0.137,0.161
+0,10,90009,0.262,0.525
+0,11,90008,0.320,0.386
+0,11,90009,0.268,0.544
+0,5,90001,0.106,0.230
+0,4,90001,0.051,0.144
+0,3,90001,0.060,0.225
+0,7,90000,0.195,0.700
+0,7,90001,0.190,0.385
+0,10,90001,0.104,0.137
+0,5,90000,0.200,0.684
+0,8,90001,0.080,0.118
+0,7,90009,0.115,0.770
+0,5,90009,0.170,0.703
+0,5,90004,0.190,0.457
+0,12,90005,0.210,0.310
